mds: make rstat.rctime follow inodes' ctime

Fixes: http://tracker.ceph.com/issues/23380
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>